# Dr-Heidi

./: .gitignore  CLAUDE.md  FINAL_REPORT.md  LICENSE  README.md  run.sh
.claude/: settings.json
.claude/agents/: code-debugger.md  config-manager.md  eval-runner.md  idea-validator.md  lead-researcher.md  novelty-checker.md  reviewer.md
.claude/skills/ideate/: SKILL.md
.claude/skills/paper-digest/: SKILL.md
.claude/skills/paper-scout/: SKILL.md
docs/: STATUS.md  WEBUI_BUILD_REPORT.md
docs/trends/: round0_audit.md  round1_comparison.md
ideas/: being-h08a-posterior-action-token-future.md  being-h08b-mixture-of-queries-router.md  being-h08c-latent-mppi-verifier-search.md  belief-gated-system2-dispatch.md  bidirectional-flow-matched-wam.md  contact-reward-scorer-for-wm-mcts.md  feasibility-calibrated-latent-planning.md  learned-working-memory-for-hierarchical-vla.md  risk-aware-particle-planner-for-wam.md  self-supervised-affordance-maps-from-real-play.md  vla-critic-counterfactual-dagger.md
ideas/_draft/: pose-posterior-being-h07.md
papers/2026-01/2601.16163/: gaps.md  metadata.json  notes.md
papers/2026-02/2602.10098/: gaps.md  metadata.json  (+1 more)
prompts/: README.md  example_exploratory.md  example_focused.md  run-latent-planning-20260419.md  template.md
queries/: wam_vla.yaml
scripts/: arxiv_fetch.py
seeds/: README.md
trends/: round0_audit.md
webui/backend/: pyproject.toml
webui/backend/dr_heidi_webui/: __init__.py  app.py  events.py  papers.py  parser.py  sessions.py
webui/backend/tests/: test_app.py  test_parser.py
webui/scripts/: run.sh
(+169 files in other folders)
