[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-heidi-webui"
version = "0.1.0"
description = "Replay viewer for the Dr. Heidi research-idea agent pipeline"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sse-starlette>=2.0",
  "pyyaml>=6.0",
  "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["dr_heidi_webui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
